--- a/fcuser/templates/register.html
+++ b/fcuser/templates/register.html
@@ -20,20 +20,22 @@
     <div class="row">
         <div class="col-12">
 
-            <form>
+            <form method="post" action=".">
+                {% csrf_token %}
               <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                <label for="username">사용자 이름</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="사용자 이름">
               </div>
               <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <label for="password">비밀번호</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
               </div>
-              <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
+                <div class="form-group">
+                <label for="re-password">비밀번호 확인</label>
+                <input type="password" class="form-control" id="re-password" name="re-password" placeholder="비밀번호 확인">
               </div>
+
               <button type="submit" class="btn btn-primary">Submit</button>
             </form>
 
