--- a/fcuser/templates/register.html
+++ b/fcuser/templates/register.html
@@ -30,6 +30,10 @@
                 <label for="username">사용자 이름</label>
                 <input type="text" class="form-control" id="username" name="username" placeholder="사용자 이름">
               </div>
+                <div class="form-group">
+                <label for="username">사용자 E-mail</label>
+                <input type="text" class="form-control" id="useremail" name="useremail" placeholder="사용자 이메일">
+              </div>
               <div class="form-group">
                 <label for="password">비밀번호</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
