--- a/fcuser/templates/login.html
+++ b/fcuser/templates/login.html
@@ -1,17 +1,6 @@
-<!doctype html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>로그인</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
-<body>
-
-<div class="container">
+{% extends 'base.html' %}
+{% block title %}로그인{% endblock %}
+{% block contents %}
     <div class="row mt-5 text-center">
         <div class="col-12">
             <h1>로그인</h1>
@@ -26,25 +15,25 @@
             <form method="post" action=".">
                 {% csrf_token %}
 
-              <div class="form-group">
-                <label for="username">사용자 이름</label>
-                <input type="text" class="form-control" id="username" name="username" placeholder="사용자 이름">
-              </div>
-              <div class="form-group">
-                <label for="password">비밀번호</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
-              </div>
+                {% for field in form %}
+                <div class="form-group">
+                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" name="{{ field.name }}" placeholder="{{ field.label }}">
+                </div>
+                {% endfor %}
 
-              <button type="submit" class="btn btn-primary">로그인</button>
+                {% comment %}<div class="form-group">
+                    <label for="username">사용자 이름</label>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="사용자 이름">
+                </div>
+                <div class="form-group">
+                    <label for="password">비밀번호</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
+                </div>{% endcomment %}
+
+                <button type="submit" class="btn btn-primary">로그인</button>
             </form>
 
         </div>
     </div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-</body>
-</html>
+{% endblock %}
