게시판 리스트까지 작업 완료

--- a/fcuser/templates/login.html
+++ b/fcuser/templates/login.html
@@ -20,6 +20,11 @@
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                     <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" name="{{ field.name }}" placeholder="{{ field.label }}">
                 </div>
+
+                    {% if field.errors %}
+                        <span style="color:red;">{{ field.errors }}</span>
+                    {% endif %}
+
                 {% endfor %}
 
                 {% comment %}<div class="form-group">
