게시판 리스트까지 작업 완료

--- a/board/templates/board_list.html
+++ b/board/templates/board_list.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="row">
-    <button class="btn btn-primary">글쓰기</button>
+    <a class="btn btn-primary" href = '/board/write/'>글쓰기</a>
     </div>
 
 {% endblock %}
