부트 스트램으로 테마 적용

--- a/blog/templates/blog/post_archive_month.html
+++ b/blog/templates/blog/post_archive_month.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
+{% block title %}Blog List{% endblock %}
+{% block mainTitle %}Blog List{% endblock %}
+{% block contents %}
+
 <h1>Post archives for {{ month|date:"N, Y" }}</h1>
 
 <div>
@@ -11,3 +15,5 @@
         {% endfor %}
     </ul>
 </div>
+
+{% endblock %}
