--- a/board/templates/board_list.html
+++ b/board/templates/board_list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}게시판 리스트{% endblock %}
+{% block mainTitle %}게시판 리스트{% endblock %}
 {% block contents %}
 
     <div class="row mt-5">
