--- a/blog/templates/blog/post_all.html
+++ b/blog/templates/blog/post_all.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
-<h1>Blog List</h1>
+{% extends 'base.html' %}
+{% block title %}Blog List{% endblock %}
+{% block mainTitle %}Blog List{% endblock %}
+{% block contents %}
 
 {% for post in posts %}
 
@@ -26,3 +28,4 @@
 
     </span>
 </div>
+{% endblock %}
