--- a/blog/templates/blog/post_archive.html
+++ b/blog/templates/blog/post_archive.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+{% block title %}Blog List{% endblock %}
+{% block mainTitle %}Blog List{% endblock %}
+{% block contents %}
+
 <h1>Post archives until {% now "N d y" %}</h1>
 
 <ul>
@@ -21,3 +26,5 @@
         {% endfor %}
     </ul>
 </div>
+
+{% endblock %}
