--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+{% block title %}Blog List{% endblock %}
+{% block mainTitle %}Blog List{% endblock %}
+{% block contents %}
+
 <h2>{{ object.title }}</h2>
 
 <p class="other_posts">
@@ -16,3 +21,5 @@
 <div class="body">
     {{ object.content|linebreaks }}
 </div>
+
+{% endblock %}
