--- a/board/templates/board_detail.html
+++ b/board/templates/board_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}로그인{% endblock %}
+{% block title %}게시판 상세{% endblock %}
+{% block mainTitle %}게시판 상세{% endblock %}
 {% block contents %}
     <div class="row mt-5 text-center">
         <div class="col-12">
