--- a/board/templates/board_write.html
+++ b/board/templates/board_write.html
@@ -1,11 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}로그인{% endblock %}
+{% block title %}게시판 글쓰기{% endblock %}
+{% block mainTitle %}게시판 글쓰기{% endblock %}
 {% block contents %}
-    <div class="row mt-5 text-center">
-        <div class="col-12">
-            <h1>로그인</h1>
-        </div>
-    </div>
     <div class="row mt-5">
         {{ error }}
     </div>
