--- a/bookmark/templates/bookmark/bookmark_detail.html
+++ b/bookmark/templates/bookmark/bookmark_detail.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Bookmark Detail</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Bookmark Detail{% endblock %}
+{% block mainTitle %}Bookmark Detail{% endblock %}
+{% block contents %}
 
-<div id="container">
     <h1>{{ object.title }}</h1>
 
     <ul>
-        <li>URL : <a href = "{{ object.url }}">{{ object.url }}</a></li>
+        <li>URL : <a href="{{ object.url }}">{{ object.url }}</a></li>
     </ul>
-</div>
-
-</body>
+{% endblock %}
