--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Bookmark List</title>
-</head>
-<body>
-
-<div id="container">
-
-    <h1>Bookmark List</h1>
+{% extends 'base.html' %}
+{% block title %}Bookmark List{% endblock %}
+{% block mainTitle %}Bookmark List{% endblock %}
+{% block contents %}
 
     <ul>
         {% for bookmark in object_list %}
@@ -16,7 +9,4 @@
         {% endfor %}
     </ul>
 
-</div>
-
-</body>
-</html>
+{% endblock %}
