--- a/fcuser/templates/login.html
+++ b/fcuser/templates/login.html
@@ -1,11 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}로그인{% endblock %}
+{% block mainTitle %}로그인{% endblock %}
 {% block contents %}
-    <div class="row mt-5 text-center">
-        <div class="col-12">
-            <h1>로그인</h1>
-        </div>
-    </div>
     <div class="row mt-5">
         {{ error }}
     </div>
@@ -26,15 +22,6 @@
                     {% endif %}
 
                 {% endfor %}
-
-                {% comment %}<div class="form-group">
-                    <label for="username">사용자 이름</label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="사용자 이름">
-                </div>
-                <div class="form-group">
-                    <label for="password">비밀번호</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
-                </div>{% endcomment %}
 
                 <button type="submit" class="btn btn-primary">로그인</button>
             </form>
