--- a/fcuser/templates/register.html
+++ b/fcuser/templates/register.html
@@ -1,11 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}회원가입{% endblock %}
+{% block mainTitle %}회원가입{% endblock %}
 {% block contents %}
-    <div class="row mt-5 text-center">
-        <div class="col-12">
-            <h1>회원가입</h1>
-        </div>
-    </div>
     <div class="row mt-5">
         {{ error }}
     </div>
