--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,15 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="dropdown-toggle nav-link js-scroll-trigger" data-toggle="dropdown" role="button"
+                       aria-haspopup="true"
+                       aria-expanded="true"> <span class="nav-label">Services</span> <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Service A</a></li>
+                        <li><a href="#">Service B</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
