--- a/templates/base.html
+++ b/templates/base.html
@@ -34,17 +34,24 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+
                 <li class="nav-item dropdown">
                     <a href="#" class="dropdown-toggle nav-link js-scroll-trigger" data-toggle="dropdown" role="button"
                        aria-haspopup="true"
-                       aria-expanded="true"> <span class="nav-label">Services</span> <span class="caret"></span></a>
+                       aria-expanded="true"> <span class="nav-label">Bookmark</span> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Service A</a></li>
-                        <li><a href="#">Service B</a></li>
+                        <li><a href="#">Bookmark list</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="dropdown-toggle nav-link js-scroll-trigger" data-toggle="dropdown" role="button"
+                       aria-haspopup="true"
+                       aria-expanded="true"> <span class="nav-label">Blog</span> <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Blog list</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Login</a></li>
             </ul>
         </div>
     </div>
