--- a/board/templates/board_detail.html
+++ b/board/templates/board_detail.html
@@ -2,31 +2,24 @@
 {% block title %}게시판 상세{% endblock %}
 {% block mainTitle %}게시판 상세{% endblock %}
 {% block contents %}
-    <div class="row mt-5 text-center">
-        <div class="col-12">
-            <h1>로그인</h1>
-        </div>
-    </div>
+
     <div class="row mt-5">
         {{ error }}
     </div>
     <div class="row">
         <div class="col-12">
 
-
-                <div class="form-group">
-                    <label for="">제목</label>
-                    <input type="text" readonly class="form-control" value = "{{ board.title }}">
-                </div>
+            <div class="form-group">
+                <label for="">제목</label>
+                <input type="text" readonly class="form-control" value="{{ board.title }}">
+            </div>
 
             <div class="form-group">
-                    <label for="">내용</label>
-                    <textarea class="form-control" class = 'readonly'>{{ board.content }}</textarea>
-                </div>
+                <label for="">내용</label>
+                <textarea class="form-control" readonly>{{ board.content }}</textarea>
+            </div>
 
-
-
-                <button type="submit" class="btn btn-primary">글쓰기</button>
+            <a href="{% url 'board:list' %}" class="btn btn-primary" type="button">돌아가기</a>
 
         </div>
     </div>
