--- a/board/templates/board_list.html
+++ b/board/templates/board_list.html
@@ -16,19 +16,54 @@
                 </thead>
                 <tbody>
                 {% for board in boards %}
-                <tr>
-                    <th>{{ board.id }}</th>
-                    <td>{{ board.title }}</td>
-                    <td>{{ board.writer }}</td>
-                    <td>{{ board.registered_dttm }}</td>
-                </tr>
+                    <tr>
+                        <th><a href="{% url 'board:detail' board.id %}">{{ board.id }}</a></th>
+                        <td><a href="{% url 'board:detail' board.id %}">{{ board.title }}</a></td>
+                        <td>{{ board.writer }}</td>
+                        <td>{{ board.registered_dttm }}</td>
+                    </tr>
                 {% endfor %}
                 </tbody>
             </table>
         </div>
     </div>
+
+    <div class="row mt-2">
+        <div class="col-12">
+            <nav>
+                <ul class="pagination justify-content-center">
+                    {% if boards.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?p={{ boards.previous_page_number }}">이전으로</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item disabled">
+                            <a class="page-link" href="#">이전으로</a>
+                        </li>
+
+                    {% endif %}
+
+                    <li class="page-item">
+                        <a class="page-link" href="#">{{ boards.number }}/{{ boards.paginator.num_pages }}</a>
+                    </li>
+
+                    {% if boards.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?p={{ boards.next_page_number }}">다음으로</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item disabled">
+                            <a class="page-link " href="#">다음으로</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
+
+        </div>
+    </div>
+
     <div class="row">
-    <a class="btn btn-primary" href = '/board/write/'>글쓰기</a>
+        <a class="btn btn-primary" href='{% url 'board:write' %}'>글쓰기</a>
     </div>
 
 {% endblock %}
