--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,23 +3,40 @@
 {% block mainTitle %}Blog List{% endblock %}
 {% block contents %}
 
-<h2>{{ object.title }}</h2>
+    <h2>{{ object.title }}</h2>
 
-<p class="other_posts">
-    {% if object.get_previous_by_modify_date %}
-        <a href="{{ object.get_previous_post.get_absolute_url }}" title="View previous post">&laquo;--{{ object.get_previous_post }}</a>
-    {% endif %}
+    <p class="other_posts">
+        {% if object.get_previous_by_modify_date %}
+            <a href="{{ object.get_previous_post.get_absolute_url }}"
+               title="View previous post">&laquo;--{{ object.get_previous_post }}</a>
+        {% endif %}
 
-{% if object.get_next_by_modify_date %}
-        <a href="{{ object.get_next_post.get_absolute_url }}" title="View next post">&raquo;--{{ object.get_next_post }}</a>
-    {% endif %}
-</p>
+        {% if object.get_next_by_modify_date %}
+            <a href="{{ object.get_next_post.get_absolute_url }}"
+               title="View next post">&raquo;--{{ object.get_next_post }}</a>
+        {% endif %}
+    </p>
 
-<p class="date">{{ object.modify_date|date:"j F Y" }}</p>
-<Br>
+    <p class="date">{{ object.modify_date|date:"j F Y" }}</p>
+    <Br>
 
-<div class="body">
-    {{ object.content|linebreaks }}
-</div>
+    <div class="body">
+        {{ object.content|linebreaks }}
+    </div>
+
+    <div>
+
+        <b>TAGS</b>
+
+    {% load tagging_tags %}
+    {% tags_for_object object as tags %}
+
+    {% for tag in tags %}
+    <a href = "{% url 'blog:tagged_object_list' tag.name %}">{{ tag.name }}</a>
+    {% endfor %}
+
+    <a href = "{% url 'blog:tag_cloud' %}"><i>[ TagCloud ]</i></a>
+
+    </div>
 
 {% endblock %}
