회원 가입 - Form 으로 변경

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/fcuser/logout/">Logout</a></li>
                 {% else %}
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/fcuser/login/">Login</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/fcuser/register/">Join</a></li>
                 {% endif %}
             </ul>
         </div>
