--- a/fcuser/templates/register.html
+++ b/fcuser/templates/register.html
@@ -11,25 +11,19 @@
             <form method="post" action=".">
                 {% csrf_token %}
 
-              <div class="form-group">
-                <label for="username">사용자 이름</label>
-                <input type="text" class="form-control" id="username" name="username" placeholder="사용자 이름">
-              </div>
+              {% for field in form %}
                 <div class="form-group">
-                <label for="username">사용자 E-mail</label>
-                <input type="text" class="form-control" id="useremail" name="useremail" placeholder="사용자 이메일">
-              </div>
-              <div class="form-group">
-                <label for="password">비밀번호</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
-              </div>
+                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" name="{{ field.name }}" placeholder="{{ field.label }}">
+                </div>
 
-                <div class="form-group">
-                <label for="re-password">비밀번호 확인</label>
-                <input type="password" class="form-control" id="re-password" name="re-password" placeholder="비밀번호 확인">
-              </div>
+                    {% if field.errors %}
+                        <span style="color:red;">{{ field.errors }}</span>
+                    {% endif %}
 
-              <button type="submit" class="btn btn-primary">Submit</button>
+                {% endfor %}
+
+              <button type="submit" class="btn btn-primary">회원 가입</button>
             </form>
 
         </div>
