--- a/product/templates/product.html
+++ b/product/templates/product.html
@@ -19,8 +19,8 @@
             {% for product in object_list %}
 
                 <tr>
-                    <th scope="row">{{ product.id }}</th>
-                    <th>{{ product.name }}</th>
+                    <th scope="row"><a href = "/product/{{ product.id }}">{{ product.id }}</a></th>
+                    <th><a href = "/product/{{ product.id }}">{{ product.name }}</a></th>
                     <th>{{ product.price|intcomma }}원</th>
                     <th>{{ product.registered_date|date:'Y-m-d H:i' }}</th>
                 </tr>
