상품 주문하기 페이지 끼지 연결

--- a/product/templates/product_detail.html
+++ b/product/templates/product_detail.html
@@ -14,7 +14,34 @@
 
                 </div>
                 <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+
+                         <form method="post" action="/order/create/">
+
+                        {% csrf_token %}
+
+            {% for f in form %}
+                <div class="form-group">
+                    {%  ifnotequal f.name 'product' %}
+                    <label for="{{ f.id_for_label }}">{{ f.label }}</label>
+                    {% endifnotequal %}
+                    <input type="{{ f.field.widget.input_type }}" class="form-control" id="{{ f.id_for_label }}" name="{{f.name}}" placeholder="{{ f.label }}" value = "{% ifequal f.name 'product' %}{{ product.id }}{% endifequal %}">
+                </div>
+
+                {% if f.errors %}
+                    <span class="text-danger">{{ f.errors }}</span>
+                {% endif %}
+            {% endfor %}
+
+                        <button type='submit' class = "btn btn-primary">주문하기</button>
+
+                    </form>
+
+                    </li>
+
                     <li class="list-group-item">가격: {{ product.price|intcomma }}원</li>
+                     <li class="list-group-item">등록날짜 : {{ product.register_date|date:'Y-m-d H:i' }}</li>
+                    <li class="list-group-item">재고 : {{ product.stock|intcomma }}</li>
                     <li class="list-group-item">{{ product.description|safe }}</li>
                 </ul>
 
