--- a/product/templates/product.html
+++ b/product/templates/product.html
@@ -20,7 +20,7 @@
 
                 <tr>
                     <th scope="row"><a href = "/product/{{ product.id }}">{{ product.id }}</a></th>
-                    <th><a href = "/product/{{ product.id }}">{{ product.name }}</a></th>
+                    <th><a id="product-{{ product.id }}" href = "/product/{{ product.id }}" onmouseover="product_detail({{ product.id }})" onmouseleave="product_leave({{ product.id }})">{{ product.name }}</a></th>
                     <th>{{ product.price|intcomma }}원</th>
                     <th>{{ product.registered_date|date:'Y-m-d H:i' }}</th>
                 </tr>
@@ -33,5 +33,32 @@
 
 
     </div>
+
+{% endblock %}
+{% block extra_script %}
+
+     <script>
+
+        function product_detail(id)
+        {
+            $.ajax({
+              url: "/api/product/" + id,
+              success: function( result ) {
+                  $("#product-" + id).popover({
+                      html:true,
+                      content: result.name + "<br>" + result.price
+                  }).popover('show')
+              }
+            });
+        }
+
+        function product_leave(id)
+        {
+            $("#product-" + id).popover('hide');
+        }
+
+        $(document).ready(function () {
+        });
+    </script>
 
 {% endblock %}
